--- a/styles/style.css
+++ b/styles/style.css
@@ -306,7 +306,8 @@ ul.guessBox {
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	color: #fff;
-	overflow: auto;
+	word-wrap: break-word;
+	/*overflow: auto;*/
 }
 ul.guessBox li {
 	display: inline;
